Enhance website with additional features, animations, and interactions

--- a/about.html
+++ b/about.html
@@ -6,17 +6,16 @@
     <title>About Page</title>
     <style>
         body {
-            margin: 0;
-            padding: 20px;
             background: linear-gradient(45deg, #4ecdc4, #ff6b6b);
             color: white;
-            font-family: Arial, sans-serif;
             text-align: center;
+            padding: 50px;
         }
     </style>
 </head>
 <body>
-    <h1>About This Webpage</h1>
-    <p>This is the about page, created as part of the enhancements. It includes more details and is linked from the home page.</p>
+    <h1>About This Website</h1>
+    <p>This is the about page with additional content and images.</p>
+    <img src="https://via.placeholder.com/200" alt="About Image">
 </body>
 </html>
