--- a/index.html
+++ b/index.html
@@ -5,13 +5,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Webpage</title>
     <style>
+        /* Enhanced styles with animations and responsiveness */
         body {
             margin: 0;
             padding: 0;
+            height: 100vh;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
             font-family: Arial, sans-serif;
             color: white;
             text-align: center;
+            animation: fadeIn 1s ease-in;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         nav {
             width: 100%;
@@ -41,18 +52,13 @@
         }
         .content {
             margin-top: 60px;
-            padding: 20px;
-            animation: fadeIn 1s ease-in;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
+            text-align: center;
         }
         button {
-            background: white;
-            color: #ff6b6b;
-            border: none;
             padding: 10px 20px;
+            background: white;
+            border: none;
+            border-radius: 5px;
             cursor: pointer;
             transition: background 0.3s;
         }
@@ -65,16 +71,16 @@
             nav ul {
                 flex-direction: column;
             }
-            nav ul li {
-                margin: 10px 0;
-            }
         }
     </style>
     <script>
-        // Simple interaction: Alert on button click
-        function handleClick() {
-            alert('Button clicked! Welcome to the interactive page.');
-        }
+        // Add JavaScript interaction
+        document.addEventListener('DOMContentLoaded', function() {
+            const button = document.querySelector('button');
+            button.addEventListener('click', function() {
+                alert('Button clicked! Welcome to the enhanced page.');
+            });
+        });
     </script>
 </head>
 <body>
@@ -86,10 +92,9 @@
     </nav>
     <div class="content">
         <h1>Welcome to My Beautiful Webpage</h1>
-        <p>This is an enhanced webpage with added elements. Explore the navigation and interact with the button!</p>
-        <img src="https://via.placeholder.com/300" alt="Placeholder Image" style="max-width: 100%;">
-        <p>Additional text: This section includes more content for better user experience.</p>
-        <button onclick="handleClick()">Click Me!</button>
+        <p>This is an enhanced webpage with animations and interactions. Explore more!</p>
+        <button>Click Me!</button>
+        <img src="https://via.placeholder.com/300" alt="Placeholder Image" style="margin-top: 20px;">
     </div>
 </body>
 </html>
