--- a/index.html
+++ b/index.html
@@ -4,97 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beautiful Webpage</title>
-    <style>
-        /* Enhanced styles with animations and responsiveness */
-        body {
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(45deg, #ff6b6b, #4ecdc4);
-            font-family: Arial, sans-serif;
-            color: white;
-            text-align: center;
-            animation: fadeIn 1s ease-in;
-        }
-        @keyframes fadeIn {
-            from { opacity: 0; }
-            to { opacity: 1; }
-        }
-        nav {
-            width: 100%;
-            background: rgba(0, 0, 0, 0.5);
-            padding: 15px 0;
-            position: fixed;
-            top: 0;
-        }
-        nav ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-        }
-        nav ul li {
-            margin: 0 20px;
-        }
-        nav ul li a {
-            color: white;
-            text-decoration: none;
-            font-weight: bold;
-        }
-        nav ul li a:hover {
-            color: #ff6b6b;
-            transition: color 0.3s;
-        }
-        .content {
-            margin-top: 60px;
-            text-align: center;
-        }
-        button {
-            padding: 10px 20px;
-            background: white;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #ff6b6b;
-            color: white;
-        }
-        /* Responsive design */
-        @media (max-width: 600px) {
-            nav ul {
-                flex-direction: column;
-            }
-        }
-    </style>
-    <script>
-        // Add JavaScript interaction
-        document.addEventListener('DOMContentLoaded', function() {
-            const button = document.querySelector('button');
-            button.addEventListener('click', function() {
-                alert('Button clicked! Welcome to the enhanced page.');
-            });
-        });
-    </script>
+    <link rel="stylesheet" href="assets/css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <nav>
-        <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-        </ul>
-    </nav>
-    <div class="content">
-        <h1>Welcome to My Beautiful Webpage</h1>
-        <p>This is an enhanced webpage with animations and interactions. Explore more!</p>
-        <button>Click Me!</button>
-        <img src="https://via.placeholder.com/300" alt="Placeholder Image" style="margin-top: 20px;">
-    </div>
+    <header>
+        <nav>
+            <div class="logo">Beautiful Webpage</div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section class="hero">
+            <h1>Welcome to My Beautiful Webpage</h1>
+            <p>A modern and responsive design for your inspiration.</p>
+            <button class="cta-button">Explore More</button>
+        </section>
+
+        <section class="features">
+            <div class="feature-card">
+                <h2>Clean Design</h2>
+                <p>Minimalistic and elegant.</p>
+            </div>
+            <div class="feature-card">
+                <h2>Responsive</h2>
+                <p>Works on all devices.</p>
+            </div>
+            <div class="feature-card">
+                <h2>Fast Loading</h2>
+                <p>Optimized for performance.</p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 Beautiful Webpage. All rights reserved.</p>
+    </footer>
 </body>
 </html>
