--- a/index.html
+++ b/index.html
@@ -1,50 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Beautiful Webpage</title>
+    <title>AI 演示网站</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
         <nav>
-            <div class="logo">Beautiful Webpage</div>
+            <div class="logo">AI 演示网站</div>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html">关于</a></li>
+                <li><a href="ai.html">AI 体验</a></li>
             </ul>
         </nav>
     </header>
 
     <main>
         <section class="hero">
-            <h1>Welcome to My Beautiful Webpage</h1>
-            <p>A modern and responsive design for your inspiration.</p>
-            <button class="cta-button">Explore More</button>
+            <h1>欢迎来到我的 AI 演示网站</h1>
+            <p>这里展示了一个现代、响应式的网页模板。</p>
+            <button class="cta-button">开始探索</button>
         </section>
 
         <section class="features">
             <div class="feature-card">
-                <h2>Clean Design</h2>
-                <p>Minimalistic and elegant.</p>
+                <h2>简洁设计</h2>
+                <p>极简而优雅。</p>
             </div>
             <div class="feature-card">
-                <h2>Responsive</h2>
-                <p>Works on all devices.</p>
+                <h2>完全响应式</h2>
+                <p>适配所有设备。</p>
             </div>
             <div class="feature-card">
-                <h2>Fast Loading</h2>
-                <p>Optimized for performance.</p>
+                <h2>加载迅速</h2>
+                <p>性能优化的体验。</p>
             </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Beautiful Webpage. All rights reserved.</p>
+        <p>&copy; 2023 AI 演示网站，保留所有权利。</p>
     </footer>
 </body>
 </html>
