Add model introduction page and clean up

--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About | Beautiful Webpage</title>
+    <title>关于 | AI 演示网站</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -11,12 +11,12 @@
     <!-- Navigation Bar -->
     <nav class="navbar">
         <div class="container">
-            <a href="index.html" class="logo">Beautiful Webpage</a>
+            <a href="index.html" class="logo">AI 演示网站</a>
             <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html">首页</a></li>
+                <li><a href="about.html" class="active">关于</a></li>
+                <li><a href="ai.html">AI 体验</a></li>
+                <li><a href="models.html">模型介绍</a></li>
             </ul>
         </div>
     </nav>
@@ -24,8 +24,8 @@
     <!-- Hero Section -->
     <header class="hero about-hero">
         <div class="container">
-            <h1>About Us</h1>
-            <p>Learn more about our journey and what drives us.</p>
+            <h1>关于我们</h1>
+            <p>了解我们的旅程以及前进的动力。</p>
         </div>
     </header>
 
@@ -33,42 +33,42 @@
     <section class="about-content">
         <div class="container">
             <div class="about-intro">
-                <h2>Our Story</h2>
-                <p>We are a passionate team dedicated to creating beautiful and functional websites. Our journey began in 2023, and since then, we've helped countless clients bring their ideas to life.</p>
+                <h2>我们的故事</h2>
+                <p>我们是一支热衷于构建精美网站的团队，自 2023 年起不断帮助客户实现创意。</p>
             </div>
 
             <div class="timeline">
-                <h2>Timeline</h2>
+                <h2>发展历程</h2>
                 <div class="timeline-item">
                     <h3>2023</h3>
-                    <p>Founded with a vision to revolutionize web design.</p>
+                    <p>怀揣革新网页设计的愿景正式成立。</p>
                 </div>
                 <div class="timeline-item">
                     <h3>2024</h3>
-                    <p>Launched our first major project, gaining recognition in the industry.</p>
+                    <p>推出首个大型项目，在业界赢得关注。</p>
                 </div>
                 <div class="timeline-item">
-                    <h3>Future</h3>
-                    <p>Continuing to innovate and inspire.</p>
+                    <h3>未来</h3>
+                    <p>持续创新并保持灵感。</p>
                 </div>
             </div>
 
             <div class="skills">
-                <h2>Our Skills</h2>
+                <h2>我们的技能</h2>
                 <div class="skill-item">
-                    <h3>Web Design</h3>
+                    <h3>网页设计</h3>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 90%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <h3>Development</h3>
+                    <h3>开发能力</h3>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 85%;"></div>
                     </div>
                 </div>
                 <div class="skill-item">
-                    <h3>Creativity</h3>
+                    <h3>创造力</h3>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 95%;"></div>
                     </div>
@@ -80,10 +80,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2023 Beautiful Webpage. All rights reserved.</p>
+            <p>&copy; 2023 AI 演示网站，保留所有权利。</p>
             <div class="social-links">
-                <a href="#">Twitter</a>
-                <a href="#">LinkedIn</a>
+                <a href="#">微博</a>
+                <a href="#">知乎</a>
                 <a href="#">GitHub</a>
             </div>
         </div>
