--- a/models.html
+++ b/models.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>AI 演示网站</title>
+    <title>模型介绍 | AI 演示网站</title>
     <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
@@ -15,34 +15,30 @@
                 <li><a href="index.html">首页</a></li>
                 <li><a href="about.html">关于</a></li>
                 <li><a href="ai.html">AI 体验</a></li>
-                <li><a href="models.html">模型介绍</a></li>
+                <li><a href="models.html" class="active">模型介绍</a></li>
             </ul>
         </nav>
     </header>
-
     <main>
-        <section class="hero">
-            <h1>欢迎来到我的 AI 演示网站</h1>
-            <p>这里展示了一个现代、响应式的网页模板。</p>
-            <button class="cta-button">开始探索</button>
+        <section class="hero" style="height:auto; padding:4rem 2rem;">
+            <h1>模型介绍</h1>
+            <p>了解我们支持的主要 AI 模型。</p>
         </section>
-
         <section class="features">
             <div class="feature-card">
-                <h2>简洁设计</h2>
-                <p>极简而优雅。</p>
+                <h2>GPT-3.5</h2>
+                <p>通用对话模型，擅长文本生成。</p>
             </div>
             <div class="feature-card">
-                <h2>完全响应式</h2>
-                <p>适配所有设备。</p>
+                <h2>GPT-4</h2>
+                <p>更强大的推理与理解能力。</p>
             </div>
             <div class="feature-card">
-                <h2>加载迅速</h2>
-                <p>性能优化的体验。</p>
+                <h2>定制模型</h2>
+                <p>根据业务需求进行微调。</p>
             </div>
         </section>
     </main>
-
     <footer>
         <p>&copy; 2023 AI 演示网站，保留所有权利。</p>
     </footer>
